--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -13,3 +13,9 @@ assetdir = 'static'
   unsafe = true
 
 enableGitInfo = true
+
+[menu]
+  [[menu.main]]
+  name = 'Kategorien und Stichwörter'
+  url = '/tags'
+  weight = 100
